fix: select menu not opening on mobile

--- a/styles/components/general/select.scss
+++ b/styles/components/general/select.scss
@@ -2,18 +2,6 @@
 	min-width: 200px;
 }
 
-.react-select-control {
-	border-radius: $component-border-radius !important;
-
-	background-color: $component-background-3 !important;
-	border: 1px solid $component-background-border !important;
-
-	&.focused {
-		border-color: $main !important;
-		box-shadow: 0px 0px 10px 1px $main;
-	}
-}
-
 .react-select-indicator {
 	transition: transform 0.15s ease-out 0s !important;
 }
@@ -21,10 +9,6 @@
 .react-select-singlevalue {
 	display: flex !important;
 	align-items: center;
-}
-
-.react-select-input {
-	color: $white !important;
 }
 
 .react-select-menu {
@@ -116,5 +100,22 @@
 		&:hover * {
 			color: $button-danger !important;
 		}
+	}
+}
+
+.react-select__control {
+	border-radius: $component-border-radius !important;
+
+	background-color: $component-background-3 !important;
+	border: 1px solid $component-background-border !important;
+
+	&--is-focused {
+		border: 1px solid $component-background-border !important;
+		box-shadow: none !important;
+	}
+
+	&--menu-is-open {
+		border: 1px solid $main !important;
+		box-shadow: 0px 0px 10px 1px $main !important;
 	}
 }
